--- a/browse.html
+++ b/browse.html
@@ -116,207 +116,32 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- player -->
+                <div class="player" id="player">
+                    <div class="player-content">
+                        <div class="player-control">
+                            <div class="controls" id="replay"><i class="fa-solid fa-rotate-left"></i></div>
+                            <div class="controls" id="play"><i class="fa-solid fa-play"></i></div>
+                            <div class="controls" id="volume"><i class="fa-solid fa-volume-high"></i></div>
+                        </div>
+                        <div class="player-line">
+                            <input type="range" name="player-range" id="player-range"" min=" 0" max="1" step="0.01"
+                                value="0">
+                        </div>
+                        <div class="player-time" id="player-time">00:00:02:01</div>
+                    </div>
+                    <div class="player-voice-wave">
+                        <div class="form-wave" data-audio-file=""></div>
+
+                    </div>
+                </div>
             </div>
         </div>
 
     </div>
 
-    <!-- player -->
-    <div class="player" id="player">
-        <div class="player-content">
-            <div class="player-control">
-                <div class="controls" id="replay"><i class="fa-solid fa-rotate-left"></i></div>
-                <div class="controls" id="play"><i class="fa-solid fa-play"></i></div>
-                <div class="controls" id="volume"><i class="fa-solid fa-volume-high"></i></div>
-            </div>
-            <div class="player-line">
-                <input type="range" name="player-range" id="player-range"" min=" 0" max="1" step="0.01" value="0">
-            </div>
-            <div class="player-time" id="player-time">00:00:02:01</div>
-        </div>
-        <div class="player-voice-wave">
-            <div class="form-wave" data-audio-file=""></div>
 
-        </div>
-    </div>
-
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            let wavesurfer = null;
-            let playerTime = document.getElementById('player-time');
-            let playControl = document.getElementById('play');
-            let replayControl = document.getElementById('replay');
-            let volumeControl = document.getElementById('volume');
-            let rangeControl = document.getElementById('player-range');
-
-            if (playControl && replayControl && volumeControl && rangeControl) {
-                document.querySelectorAll(".voice-card").forEach(function (voiceCard) {
-                    voiceCard.addEventListener("click", function () {
-                        // get the audio file from .voice-card> .wave-form
-                        let audioFile_play = voiceCard.querySelector(".wave-form").getAttribute("data-audio-file");
-
-                        // form-wave
-                        let form_wave = document.querySelector(".form-wave");
-
-                        // remove data-audio-file from form_wave
-                        form_wave.removeAttribute("data-audio-file");
-                        form_wave.innerHTML = '';
-
-                        form_wave.setAttribute("data-audio-file", audioFile_play);
-
-                        console.log('audio file ready to play');
-
-                        if (wavesurfer) {
-                            wavesurfer.destroy();
-                        }
-
-                        wavesurfer = WaveSurfer.create({
-                            container: form_wave,
-                            waveColor: '#ffffffce',
-                            progressColor: '#383351',
-                            height: 90,
-                            barWidth: 4,
-                            responsive: true,
-                            barRadius: 4,
-                            url: audioFile_play,
-                        });
-
-                        wavesurfer.on('ready', function () {
-                            // Get the duration of the audio file
-                            let duration = wavesurfer.getDuration();
-
-                            // Format the duration to HH:MM:SS
-                            let formattedDuration = new Date(duration * 1000).toISOString().substr(11, 8);
-
-                            // Set the formatted duration to the player-time element
-                            playerTime.innerText = formattedDuration;
-
-                            // Reset range control
-                            rangeControl.value = 0;
-                        });
-
-                        wavesurfer.on('audioprocess', function () {
-                            let currentTime = wavesurfer.getCurrentTime();
-                            let duration = wavesurfer.getDuration();
-                            let remainingTime = duration - currentTime;
-                            let formattedTime = new Date(remainingTime * 1000).toISOString().substr(11, 8);
-                            playerTime.innerText = formattedTime;
-
-                            // Update range input
-                            rangeControl.value = currentTime / duration;
-                        });
-
-                        wavesurfer.on('seek', function () {
-                            let currentTime = wavesurfer.getCurrentTime();
-                            let duration = wavesurfer.getDuration();
-                            let remainingTime = duration - currentTime;
-                            let formattedTime = new Date(remainingTime * 1000).toISOString().substr(11, 8);
-                            playerTime.innerText = formattedTime;
-                        });
-
-                        wavesurfer.on('finish', function () {
-                            // Reset play button to 'play' icon
-                            playControl.querySelector('i').classList.remove('fa-pause');
-                            playControl.querySelector('i').classList.add('fa-play');
-                        });
-
-                        // Show the player
-                        let player = document.getElementById('player');
-
-                        // Ensure the player's right style is set to 0 initially if it doesn't exist
-                        if (player) {
-                            if (!player.style.right) {
-                                player.style.right = '0';
-                            }
-                            if (player.style.right === '1000%') {
-                                player.style.right = '0';
-                            }
-                        }
-                    });
-                });
-
-                playControl.addEventListener('click', function () {
-                    if (wavesurfer) {
-                        wavesurfer.playPause();
-                        this.querySelector('i').classList.toggle('fa-play');
-                        this.querySelector('i').classList.toggle('fa-pause');
-                    }
-                });
-
-                replayControl.addEventListener('click', function () {
-                    if (wavesurfer) {
-                        wavesurfer.seekTo(0);
-                        wavesurfer.play();
-                        playControl.querySelector('i').classList.remove('fa-play');
-                        playControl.querySelector('i').classList.add('fa-pause');
-                    }
-                });
-
-                volumeControl.addEventListener('click', function () {
-                    if (wavesurfer) {
-                        let currentVolume = wavesurfer.getVolume();
-                        let newVolume = currentVolume === 0 ? 1 : 0;
-                        wavesurfer.setVolume(newVolume);
-                        this.querySelector('i').classList.toggle('fa-volume-high');
-                        this.querySelector('i').classList.toggle('fa-volume-mute');
-                    }
-                });
-
-                rangeControl.addEventListener('input', function () {
-                    if (wavesurfer) {
-                        let seekTo = this.value * wavesurfer.getDuration();
-                        wavesurfer.seekTo(seekTo / wavesurfer.getDuration());
-                    }
-                });
-            }
-
-            // Function to add items to favorites array in localStorage
-            function addFavorites(foldername, childfoldername, files) {
-                let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
-
-                // Create a new favorite object
-                let newFavorite = {
-                    folderName: foldername,
-                    childFolderName: childfoldername,
-                    files: files
-                };
-
-                // Check if the new favorite already exists in favorites array
-                let exists = favorites.some(favorite => (
-                    favorite.folderName === foldername &&
-                    favorite.childFolderName === childfoldername &&
-                    JSON.stringify(favorite.files) === JSON.stringify(files)
-                ));
-
-                if (!exists) {
-                    // Add the new favorite to favorites array
-                    favorites.push(newFavorite);
-                    localStorage.setItem('favorites', JSON.stringify(favorites));
-                    console.log('Added to favorites:', newFavorite);
-                } else {
-                    console.log('Already exists in favorites:', newFavorite);
-                }
-            }
-
-            // Function to handle click event on add-to-favorites buttons
-            document.querySelectorAll('.add-to-favorites').forEach(button => {
-                button.addEventListener('click', function () {
-                    let folderName = this.getAttribute('data-folder');
-                    let childFolderName = this.getAttribute('data-child-folder');
-                    let files = this.getAttribute('data-files');
-
-                    addFavorites(folderName, childFolderName, files);
-                });
-            });
-
-            // Retrieve favorites from localStorage
-            let favorites = JSON.parse(localStorage.getItem('favorites')) || [];
-
-            // Now `favorites` contains your array of favorite items, or an empty array if none exists
-            console.log(favorites);
-        });
-    </script>
     <!-- footer add button -->
     <div class="footer-button">
         <!-- for other buttons -->
