--- a/browse.html
+++ b/browse.html
@@ -129,7 +129,7 @@
                             <input type="range" name="player-range" id="player-range"" min=" 0" max="1" step="0.01"
                                 value="0">
                         </div>
-                        <div class="player-time" id="player-time">00:00:02:01</div>
+                        <div class="player-time" id="player-time"></div>
                     </div>
                     <div class="player-voice-wave">
                         <div class="form-wave" data-audio-file=""></div>
