--- a/empty-screen.html
+++ b/empty-screen.html
@@ -65,55 +65,9 @@
             <div class="content">
                 <div class="web-content">
                     <div class="row" id="main-content">
-                        <div class="card voice-card">
-                            <div class="wave-form" data-audio-file="Media/Impacts/PM_Impact 01 Strong.wav">
-                            </div>
-                            <div class="voice-card-content">
-                                <div class="voice-card-content-det">
-                                    <div class="voice-det">
-                                        <img src="images/audio-wave.png" alt="" class="img">
-                                        <span>Dramatic 1</span>
-                                    </div>
-                                    <button class="bg-transparent border-none star-icon add-to-favorites"
-                                        data-folder="impact" data-child-folder="Resires"
-                                        data-files="Media/Impacts/PM_Impact 01 Strong.wav">
-                                        <i class="fa-solid fa-star"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card voice-card">
-                            <div class="wave-form" data-audio-file="Media/Impacts/PM_Impact 02 Quick.wav">
-                            </div>
-                            <div class="voice-card-content">
-                                <div class="voice-card-content-det">
-                                    <div class="voice-det">
-                                        <img src="images/audio-wave.png" alt="" class="img">
-                                        <span>Dramatic 1</span>
-                                    </div>
-                                    <button class="bg-transparent border-none star-icon add-to-favorites"
-                                        data-folder="impact" data-child-folder="Resires"
-                                        data-files="Media/Impacts/PM_Impact 02 Quick.wav">
-                                        <i class="fa-solid fa-star"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card voice-card">
-                            <div class="wave-form" data-audio-file="Media/Impacts/PM_Impact 03 Epic.wav">
-                            </div>
-                            <div class="voice-card-content">
-                                <div class="voice-card-content-det">
-                                    <div class="voice-det">
-                                        <img src="images/audio-wave.png" alt="" class="img">
-                                        <span>Dramatic 1</span>
-                                    </div>
-                                    <button class="bg-transparent border-none star-icon add-to-favorites"
-                                        data-folder="impact" data-child-folder="Resires"
-                                        data-files="Media/Impacts/PM_Impact 03 Epic.wav">
-                                        <i class="fa-solid fa-star"></i>
-                                    </button>
-                                </div>
+                        <div class="empty-screen" id="empty-screen">
+                            <div class="empty-screen-content">
+                                <p>Select an item on the left or type above to search.</p>
                             </div>
                         </div>
                     </div>
